fix(style): override katex font size and correct figure z-index

--- a/quartz/components/styles/keybind.scss
+++ b/quartz/components/styles/keybind.scss
@@ -23,7 +23,7 @@ kbd {
   & > #shortcut-container {
     position: fixed;
     contain: layout;
-    z-index: 300;
+    z-index: 999;
     left: 0;
     top: 0;
     width: 100vw;
