--- a/quartz/components/styles/landing.scss
+++ b/quartz/components/styles/landing.scss
@@ -13,8 +13,7 @@ body[data-slug="index"] {
     font-weight: normal;
   }
 
-  a[class*="landing-links"],
-  a[id*="landing-keybind"] {
+  a[class*="landing-links"] {
     color: inherit;
     text-decoration: inherit;
     font-weight: inherit;
